# sce

./: CMakeLists.txt  LICENSE  Makefile  README.md  sce.desktop  sce.ini.template
.github/workflows/: c-cpp.yml
imgui/: build.cpp  imconfig.h  imgui.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer.cpp
src/: catenate.h  channel.h  common.h  config.cc  config.h  doc.h  filetree.cc  filetree.h  flate.cc  flate.h  ini.h  keys.h  main.cc  popup.cc  popup.h  project.cc  project.h  repo.cc  repo.h  syntax.cc  syntax.h  test.cc  theme.cc  theme.h  tui.cc  tui.h  utf8.cc  utf8.h  view.cc  view.h  workers.h
src/popup/: command.cc  command.h  diff.cc  diff.h  filter.cc  filter.h  setup.cc  setup.h
src/popup/filter/: change.cc  change.h  cmd.cc  cmd.h  complete.cc  complete.h  open.cc  open.h  refs.cc  refs.h  tags.cc  tags.h
src/syntax/: bash.cc  bash.h  cmake.cc  cmake.h  cpp.cc  cpp.h  docker.cc  docker.h  forth.cc  forth.h  haxe.cc  haxe.h  ini.cc  ini.h  javascript.cc  javascript.h  make.cc  make.h  openscad.cc  openscad.h  plaintext.cc  plaintext.h  rela.cc  rela.h  xml.cc  xml.h  yaml.cc  yaml.h
